# cypherize

./: .gitignore  .pyre_configuration  Makefile  README.md  docker-compose.yml  pyproject.toml  whoops.txt
cypherize/: project_types.py  utils.py
cypherize/schema/: __init__.py  models.py  parser.py
docs/source/: conf.py  index.rst
docs/source/API/: cypherize.rst  cypherize.schema.rst  modules.rst
examples/: __init__.py
tests/: test_examples.py
tests/schema/: test_models.py  test_schema.py
tests/utils/: test_is_optional.py
