[project]
name = "cypherize"
version = "0.1.0"
description = "Use class decorators to define your Neo4j Graph Data Model, automatically build queries and hydrate pydantic models."
authors = [
    {name = "Dom Weldon", email = "dominic.weldon@gmail.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "pdm-multirun>=0.3.1",
    "mkdocs>=1.5.3",
    "pytest>=7.4.2",
    "black>=23.9.1",
    "ruff>=0.0.291",
    "isort>=5.12.0",
    "bandit>=1.7.5",
    "security>=1.0.1",
]
